# letterboxed

./: .gitignore  README.md  gen_project.sh  test_puzzles.txt
src/: CMakeLists.txt  main.cpp
src/cmake/: commands.cmake  options.cmake  platform_config.cmake  platform_init.cmake  target_common.cmake  target_exe.cmake  target_lib.cmake  test_macros.cmake  third_party.cmake
src/core/: core.h
src/core/tests/: test_basic.cpp
src/letterboxed/: CMakeLists.txt  main.cpp
src/test_harness/: test_harness.h
src/word_db/: CMakeLists.txt  word_db.cpp  word_db.h  word_db_std.cpp  word_db_std.h
src/word_db/tests/: test_Word.cpp  test_basic.cpp  test_ops.cpp  test_std_ops.cpp
